// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CreateSubtraction /> should render 1`] = `
<Fragment>
  <ViewHeader
    title="Create Subtraction"
  >
    <ViewHeader__ViewHeaderTitle>
      Create Subtraction
    </ViewHeader__ViewHeaderTitle>
  </ViewHeader>
  <Formik
    initialValues={
      Object {
        "name": "",
        "nickname": "",
        "uploadId": "",
      }
    }
    onSubmit={[Function]}
    validationSchema={
      ObjectSchema {
        "_blacklist": ReferenceSet {
          "list": Set {},
          "refs": Map {},
        },
        "_blacklistError": undefined,
        "_excludedEdges": Array [],
        "_nodes": Array [
          "uploadId",
          "name",
        ],
        "_sortErrors": [Function],
        "_typeError": [Function],
        "_whitelist": ReferenceSet {
          "list": Set {},
          "refs": Map {},
        },
        "_whitelistError": undefined,
        "conditions": Array [],
        "deps": Array [],
        "exclusiveTests": Object {},
        "fields": Object {
          "name": StringSchema {
            "_blacklist": ReferenceSet {
              "list": Set {},
              "refs": Map {},
            },
            "_blacklistError": undefined,
            "_mutate": undefined,
            "_typeError": [Function],
            "_whitelist": ReferenceSet {
              "list": Set {},
              "refs": Map {},
            },
            "_whitelistError": undefined,
            "conditions": Array [],
            "deps": Array [],
            "exclusiveTests": Object {
              "required": true,
            },
            "spec": Object {
              "abortEarly": true,
              "nullable": false,
              "presence": "required",
              "recursive": true,
              "strict": false,
              "strip": false,
            },
            "tests": Array [
              [Function],
            ],
            "transforms": Array [
              [Function],
            ],
            "type": "string",
          },
          "uploadId": StringSchema {
            "_blacklist": ReferenceSet {
              "list": Set {},
              "refs": Map {},
            },
            "_blacklistError": undefined,
            "_mutate": undefined,
            "_typeError": [Function],
            "_whitelist": ReferenceSet {
              "list": Set {},
              "refs": Map {},
            },
            "_whitelistError": undefined,
            "conditions": Array [],
            "deps": Array [],
            "exclusiveTests": Object {
              "required": true,
            },
            "spec": Object {
              "abortEarly": true,
              "nullable": false,
              "presence": "required",
              "recursive": true,
              "strict": false,
              "strip": false,
            },
            "tests": Array [
              [Function],
            ],
            "transforms": Array [
              [Function],
            ],
            "type": "string",
          },
        },
        "spec": Object {
          "abortEarly": true,
          "nullable": false,
          "presence": "optional",
          "recursive": true,
          "strict": false,
          "strip": false,
        },
        "tests": Array [],
        "transforms": Array [
          [Function],
        ],
        "type": "object",
      }
    }
  >
    <Component />
  </Formik>
</Fragment>
`;

exports[`<SubtractionFileItem /> should render when [active=false] 1`] = `
<FileSelector__StyledSubtractionFileItem
  active={false}
  onClick={[Function]}
>
  <strong>
    test
  </strong>
  <Attribution
    time="2018-02-14T17:12:00.000000Z"
    user="test-user"
  />
</FileSelector__StyledSubtractionFileItem>
`;

exports[`<SubtractionFileItem /> should render when [active=true] 1`] = `
<FileSelector__StyledSubtractionFileItem
  active={true}
  onClick={[Function]}
>
  <strong>
    test
  </strong>
  <Attribution
    time="2018-02-14T17:12:00.000000Z"
    user="test-user"
  />
</FileSelector__StyledSubtractionFileItem>
`;
